// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUIAvatar Generic tests should accept a custom className 1`] = `
<abbr
  className="test-class xui-avatar xui-avatar-color-8"
  role="presentation"
>
  T
</abbr>
`;

exports[`XUIAvatar Generic tests should accept a custom qaHook 1`] = `
<abbr
  className="xui-avatar xui-avatar-color-8"
  data-automationid="test-hook"
  role="presentation"
>
  T
</abbr>
`;

exports[`XUIAvatar should render an \`abbr\` avatar when I give it a value 1`] = `
<abbr
  className="xui-avatar xui-avatar-color-8"
  role="presentation"
>
  T
</abbr>
`;

exports[`XUIAvatar should render an \`abbr\` avatar when I give it an identifier and a value 1`] = `
<abbr
  className="xui-avatar xui-avatar-color-7"
  role="presentation"
>
  T
</abbr>
`;

exports[`XUIAvatar should render an \`img\` avatar when I give it an image and a value 1`] = `
Array [
  <img
    alt=""
    className="xui-avatar xui-avatar-hidden"
    onError={[Function]}
    onLoad={[Function]}
    src="https://s3.amazonaws.com/uifaces/faces/twitter/kerihenare/24.jpg"
  />,
  <abbr
    className="xui-avatar xui-avatar-color-8"
    role="presentation"
  >
    T
  </abbr>,
]
`;

exports[`XUIAvatar should render in a range of sizes 1`] = `
<abbr
  className="xui-avatar xui-avatar-2xsmall xui-avatar-color-8"
  role="presentation"
>
  T
</abbr>
`;

exports[`XUIAvatar should render in a range of sizes 2`] = `
<abbr
  className="xui-avatar xui-avatar-xsmall xui-avatar-color-8"
  role="presentation"
>
  T
</abbr>
`;

exports[`XUIAvatar should render in a range of sizes 3`] = `
<abbr
  className="xui-avatar xui-avatar-small xui-avatar-color-8"
  role="presentation"
>
  T
</abbr>
`;

exports[`XUIAvatar should render in a range of sizes 4`] = `
<abbr
  className="xui-avatar xui-avatar-color-8"
  role="presentation"
>
  T
</abbr>
`;

exports[`XUIAvatar should render in a range of sizes 5`] = `
<abbr
  className="xui-avatar xui-avatar-large xui-avatar-color-8"
  role="presentation"
>
  T
</abbr>
`;

exports[`XUIAvatar should render in a range of sizes 6`] = `
<abbr
  className="xui-avatar xui-avatar-xlarge xui-avatar-color-8"
  role="presentation"
>
  T
</abbr>
`;

exports[`XUIAvatar should render in a range of variants 1`] = `
<abbr
  className="xui-avatar xui-avatar-business xui-avatar-color-8"
  role="presentation"
>
  T
</abbr>
`;
